add handlers module, refactor test
