# app/apis/v1/schemas/user.py
@@ -8,6 +8,7 @@ from marshmallow import (
 
 class User(Schema):
     id = fields.Integer()
+    username = fields.String()
     fullname = fields.String()
     created_at = fields.DateTime()
     updated_at = fields.DateTime()
